--- a/html-test/layout/index.html
+++ b/html-test/layout/index.html
@@ -112,11 +112,9 @@
                                 </div>
                             </div>
                             <div class="main-form__footer">
-                                <a href="#">Назад</a>
-                                <input type="submit" value="Далее">
+                                <a class="btn" href="#">&#10229; Назад</a>
+                                <input class="btn btn--green" type="submit" value="Далее &#10230;">
                             </div>
-
-
                         </form>
                     </div>
                 </main>
