--- a/html-test/layout/main.css
+++ b/html-test/layout/main.css
@@ -92,6 +92,7 @@ header {
     background: #f2f2f2;
     display: flex;
     justify-content: space-between;
+    padding: 15px 10px;
 }
 
 label.label--radio {
@@ -134,4 +135,36 @@ input[type="radio"]:checked + label {
 
 .text--red {
     color: #b60700;
+}
+
+.btn {
+    position: relative;
+    padding: 7px 24px;
+    border-radius: 20px;
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+    background: #c0c0c0;
+    background: -webkit-linear-gradient(#c0c0c0 0%, #888 100%);
+    background: -o-linear-gradient(#c0c0c0 0%, #888 100%);
+    background: linear-gradient(#c0c0c0 0%, #888 100%);
+    border: 2px solid #c1c1c1;
+    cursor: pointer;
+}
+
+.btn--green {
+    background: #a6db08;
+    background: -webkit-linear-gradient##a6db08 0%, #86b303 100%);
+    background: -o-linear-gradient(#a6db08 0%, #86b303 100%);
+    background: linear-gradient(#a6db08 0%, #86b303 100%);
+    border: 2px solid #a7dc09;
+}
+
+.btn:hover {
+    background: #999;
+}
+
+.btn--green:hover {
+    background: #86b303;
 }
