styled form progress bar

--- a/html-test/layout/index.html
+++ b/html-test/layout/index.html
@@ -36,7 +36,7 @@
                                 <div class="form-progress">
                                     <span class="form-progress__step">1</span>
                                     <span class="form-progress__step">2</span>
-                                    <span class="form-progress__step">3</span>
+                                    <span class="form-progress__step form-progress__step--active">3</span>
                                     <span class="form-progress__step">4</span>
                                     <span class="form-progress__step">5</span>
                                 </div>
