--- a/html-test/layout/main.css
+++ b/html-test/layout/main.css
@@ -54,6 +54,61 @@ header {
 }
 
 /** Form **/
+.main-form__header {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    margin-bottom: 40px;
+}
+
+.main-form__header h2 {
+    /*font-size: 18px;*/
+}
+
+
+.form-progress {
+    display: flex;
+    align-content: center;
+    width: 550px;
+}
+
+.form-progress__step {
+    flex: 1 0 auto;
+    align-self: center;
+    text-align: center;
+    background: #369e17;
+    background: -webkit-linear-gradient(#369e17 0%, #3bad19 100%);
+    background: -o-linear-gradient(#369e17 0%, #3bad19 100%);
+    background: linear-gradient(#369e17 0%, #3bad19 100%);
+    margin: 0 1px;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25);
+    font-style: italic;
+    font-size: 10px;
+    padding: 3px 0;
+    color: #fff;
+}
+
+.form-progress__step:first-child {
+    border-radius: 4px 0 0 4px;
+}
+
+.form-progress__step:last-child {
+    border-radius: 0 4px 4px 0;
+}
+
+.form-progress__step--active {
+    color: #fff;
+    background: #a4d807;
+    background: -webkit-linear-gradient(#94c404 0%, #a4d807 100%);
+    background: -o-linear-gradient(#94c404 0%, #a4d807 100%);
+    background: linear-gradient(#94c404 0%, #a4d807 100%);
+}
+
+.form-progress__step--active ~ .form-progress__step {
+    background: #f6f6f6;
+    color: #999;
+}
+
 .main-form__body {
     display: flex;
     flex-wrap: wrap;
