finished router / added loading and error state / style fixes

--- a/javascript-test/table/styles.css
+++ b/javascript-test/table/styles.css
@@ -13,6 +13,13 @@
 
 .table-filter {
     float: right;
+    margin-bottom: 20px;
+}
+
+.table-filter:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 table {
