--- a/html-test/tasks/styles.css
+++ b/html-test/tasks/styles.css
@@ -100,3 +100,54 @@ progress[value]::-moz-progress-bar {
 
 progress[value]::-moz-progress-value {
 }
+
+/**
+ * Button
+ */
+ .btn {
+     position: relative;
+     border: 1px solid #a8a8a8;
+     text-decoration: none;
+     font-size: .9em;
+     color: #000;
+     padding: 6px 12px;
+     border-radius: 10px;
+     background: #f2f2f2;
+     background: -webkit-linear-gradient(top, #f2f2f2, #e2e2e2);
+     background: -moz-linear-gradient(top, #f2f2f2, #e2e2e2);
+     background: linear-gradient(to bottom, #f2f2f2, #e2e2e2);
+     text-shadow: 0 1px 1px white;
+     cursor: pointer;
+ }
+
+ .btn:hover {
+     background: #e2e2e2;
+     background: -webkit-linear-gradient(top, #e2e2e2, #f2f2f2);
+     background: -moz-linear-gradient(top, #e2e2e2, #f2f2f2);
+     background: linear-gradient(to bottom, #e2e2e2, #f2f2f2);
+ }
+
+ .btn--success {
+     border: 1px solid #64c01c;
+     background: #a7f458;
+     color: white;
+     text-shadow: none;
+     background: -webkit-linear-gradient(top, #a7f458, #64c01c);
+     background: -moz-linear-gradient(top, #a7f458, #64c01c);
+     background: linear-gradient(to bottom, #a7f458, #64c01c);
+ }
+
+ .btn--success:hover {
+     background: #e2e2e2;
+     background: -webkit-linear-gradient(top, #64c01c, #a7f458);
+     background: -moz-linear-gradient(top, #64c01c, #a7f458);
+     background: linear-gradient(to bottom, #64c01c, #a7f458);
+ }
+
+ .btn--large {
+     font-size: 1.4em;
+ }
+
+ .btn--small {
+     font-size: 0.6em;
+ }
